<resources>
    <string name="app_name">Animes</string>
    <string name="textTitle">Anime</string>
    <string name="textTitle4">Details</string>
    <string name="textTitle5">Favorites</string>

    <string name="textView1">Hello there!</string>
    <string name="textView2">Sign up to start</string>
    <string name="textView3">Welcome Back!</string>
    <string name="textView4">Log in to start</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>

    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <string name="name_u">Name:</string>
    <string name="email_u">Email:</string>
    <string name="password_u">Password:</string>
    <string name="phone_u">Phone:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>