<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/textTitle4"
        android:textColor="@color/burgundy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle4" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#4E4E4E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="@+id/textTitle4"
        app:layout_constraintStart_toStartOf="@+id/textTitle4"
        app:layout_constraintTop_toTopOf="@+id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:minHeight="48dp"
        android:textColor="#4E4E4E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text2"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:minHeight="48dp"
        android:textColor="#4E4E4E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text3"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/text3" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/phone_u"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:minHeight="48dp"
        android:textColor="#4E4E4E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/text4"
        app:layout_constraintStart_toStartOf="@+id/passEditText"
        app:layout_constraintTop_toTopOf="@+id/text4" />

    <Button
        android:id="@+id/btUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/scarlet"
        android:text="@string/update"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditText"
        app:layout_constraintStart_toStartOf="@+id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/scarlet"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btUpdate"
        app:layout_constraintStart_toStartOf="@+id/btUpdate"
        app:layout_constraintTop_toBottomOf="@+id/btUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>